[gd_scene load_steps=13 format=4 uid="uid://btixu64d7g2cn"]

[ext_resource type="Texture2D" uid="uid://dfbpn4sjrvw8o" path="res://assets/Space Stuff 2/Tilesets/Bar inside.png" id="1_0h74f"]
[ext_resource type="Texture2D" uid="uid://l8iheibflqgc" path="res://assets/kenney_rpg-urban-pack/blackbackground.png" id="1_15dwq"]
[ext_resource type="PackedScene" uid="uid://b086uqul0vcjs" path="res://scenes/player.tscn" id="2_pnxco"]
[ext_resource type="PackedScene" uid="uid://b7j5fkx2psmeb" path="res://scenes/mayannaise.tscn" id="3_e86mc"]
[ext_resource type="PackedScene" uid="uid://qa0plaqh16w0" path="res://scenes/hunger_controller.tscn" id="3_pnxco"]
[ext_resource type="PackedScene" uid="uid://b2cpljbh1tc6g" path="res://scenes/ui.tscn" id="4_61xw1"]
[ext_resource type="PackedScene" uid="uid://danwcvytrencc" path="res://scenes/world_border.tscn" id="6_1g8w7"]
[ext_resource type="Script" uid="uid://bpftm3n2qffkb" path="res://scripts/maya_walk_activation_area.gd" id="8_bbve7"]
[ext_resource type="PackedScene" uid="uid://bnivix5s8c7wu" path="res://scenes/bar_door.tscn" id="9_1y754"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_61xw1"]
texture = ExtResource("1_0h74f")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -5.97959, -16, -6.00536, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -5.97959, -16, -6.00536, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_15dwq"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_61xw1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e86mc"]
size = Vector2(559, 323)

[node name="InsideBar" type="Node2D"]

[node name="Black" type="Sprite2D" parent="."]
texture = ExtResource("1_15dwq")
region_enabled = true
region_rect = Rect2(-7376.41, -7079.02, 24819.1, 17369.8)

[node name="Ground" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAD+////AQAAAAAAAAD+/wAAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wIAAQAAAAAAAAD//wIAAQAAAAAAAAAAAAIAAQAAAAAAAAABAAIAAQAAAAAAAAACAAIAAQAAAAAAAAACAAEAAQAAAAAAAAACAAAAAQAAAAAAAAACAP//AQAAAAAAAAACAP7/AQAAAAAAAAABAP7/AQAAAAAAAAAAAP7/AQAAAAAAAAD///7/AQAAAAAAAAD/////AQAAAAAAAAD//wAAAQAAAAAAAAD//wEAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAABAAAAAQAAAAAAAAABAP//AQAAAAAAAAAAAP//AQAAAAAAAAAAAAAAAQAAAAAAAAD9////AQAAAAAAAAD9/wAAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAAAAAD9/wMAAQAAAAAAAAD+/wMAAQAAAAAAAAADAAIAAQAAAAAAAAACAAMAAQAAAAAAAAABAAMAAQAAAAAAAAAAAAMAAQAAAAAAAAD//wMAAQAAAAAAAAADAAEAAQAAAAAAAAADAAAAAQAAAAAAAAADAP//AQAAAAAAAAACAP3/AQAAAAAAAAABAP3/AQAAAAAAAAAAAP3/AQAAAAAAAAD///3/AQAAAAAAAAD8/wEAAQAAAAAAAAD8/wIAAQAAAAAAAAD8/wMAAQAAAAAAAAADAP3/AQAAAAAAAAADAP7/AQAAAAAAAAD8//r/AQAAAAAAAAD8//v/AQAAAAAAAAD8//z/AQAAAAAAAAD8//3/AQAAAAAAAAD8//7/AQAAAAAAAAD8////AQAAAAAAAAD8/wAAAQAAAAAAAAD9//r/AQAAAAAAAAD9//v/AQAAAAAAAAD9//z/AQAAAAAAAAD9//3/AQAAAAAAAAD9//7/AQAAAAAAAAD+//r/AQAAAAAAAAD+//v/AQAAAAAAAAD+//z/AQAAAAAAAAD+//3/AQAAAAAAAAD+//7/AQAAAAAAAAD///r/AQAAAAAAAAD///v/AQAAAAAAAAD///z/AQAAAAAAAAAAAPr/AQAAAAAAAAAAAPv/AQAAAAAAAAAAAPz/AQAAAAAAAAABAPr/AQAAAAAAAAABAPv/AQAAAAAAAAABAPz/AQAAAAAAAAACAPr/AQAAAAAAAAACAPv/AQAAAAAAAAACAPz/AQAAAAAAAAADAPr/AQAAAAAAAAADAPv/AQAAAAAAAAADAPz/AQAAAAAAAAAEAPr/AQAAAAAAAAAEAPv/AQAAAAAAAAAEAPz/AQAAAAAAAAAEAP3/AQAAAAAAAAAEAP7/AQAAAAAAAAAEAP//AQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAPr/AQAAAAAAAAAFAPv/AQAAAAAAAAAFAPz/AQAAAAAAAAAFAP3/AQAAAAAAAAAFAP7/AQAAAAAAAAAFAP//AQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAGAPr/AQAAAAAAAAAGAPv/AQAAAAAAAAAGAPz/AQAAAAAAAAAGAP3/AQAAAAAAAAAGAP7/AQAAAAAAAAAGAP//AQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAHAPr/AQAAAAAAAAAHAPv/AQAAAAAAAAAHAPz/AQAAAAAAAAAHAP3/AQAAAAAAAAAHAP7/AQAAAAAAAAAHAP//AQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAIAPr/AQAAAAAAAAAIAPv/AQAAAAAAAAAIAPz/AQAAAAAAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAIAP//AQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAJAPr/AQAAAAAAAAAJAPv/AQAAAAAAAAAJAPz/AQAAAAAAAAAJAP3/AQAAAAAAAAAJAP7/AQAAAAAAAAAJAP//AQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAKAPr/AQAAAAAAAAAKAPv/AQAAAAAAAAAKAPz/AQAAAAAAAAAKAP3/AQAAAAAAAAAKAP7/AQAAAAAAAAAKAP//AQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAALAPr/AQAAAAAAAAALAPv/AQAAAAAAAAALAPz/AQAAAAAAAAALAP3/AQAAAAAAAAALAP7/AQAAAAAAAAALAP//AQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAADAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAD6//r/AQAAAAAAAAD6//v/AQAAAAAAAAD6//z/AQAAAAAAAAD6//3/AQAAAAAAAAD6//7/AQAAAAAAAAD6////AQAAAAAAAAD6/wAAAQAAAAAAAAD6/wEAAQAAAAAAAAD7/wIAAQAAAAAAAAD7/wMAAQAAAAAAAAD6/wMAAQAAAAAAAAD6/wIAAQAAAAAAAAD7/wEAAQAAAAAAAAD7/wAAAQAAAAAAAAD7////AQAAAAAAAAD7//7/AQAAAAAAAAD7//3/AQAAAAAAAAD7//z/AQAAAAAAAAD7//v/AQAAAAAAAAD7//r/AQAAAAAAAAAMAPr/AQAAAAAAAAAMAPv/AQAAAAAAAAAMAPz/AQAAAAAAAAAMAP3/AQAAAAAAAAAMAP7/AQAAAAAAAAAMAP//AQAAAAAAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAANAAMAAQAAAAAAAAANAAIAAQAAAAAAAAANAAEAAQAAAAAAAAANAAAAAQAAAAAAAAANAP//AQAAAAAAAAANAP7/AQAAAAAAAAANAP3/AQAAAAAAAAANAPz/AQAAAAAAAAANAPv/AQAAAAAAAAANAPr/AQAAAAAAAAA=")
tile_set = SubResource("TileSet_15dwq")

[node name="Door" type="TileMapLayer" parent="."]
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAAGAPz/AQACAAMAAAAHAPz/AQABAAMAAAA=")
tile_set = SubResource("TileSet_15dwq")

[node name="UI" parent="." instance=ExtResource("4_61xw1")]

[node name="Ysort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Mayannaise" parent="Ysort" instance=ExtResource("3_e86mc")]
position = Vector2(230, -338)

[node name="Table" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAD+//7/AQACAAEAAAD9//7/AQABAAEAAAD9////AQABAAIAAAD9/wAAAQABAAMAAAD+//3/AQACAAAAAAD9//3/AQABAAAAAAD8//7/AQAAAAEAAAD8////AQAAAAIAAAD8/wAAAQAAAAMAAAD8//3/AQAAAAEAAAD///3/AQACAAAAAAAAAP3/AQACAAAAAAD///7/AQABAAEAAAAAAP7/AQACAAEAAAD7////AQAAAAIAAAD7/wAAAQAAAAMAAAD6//7/AQAAAAEAAAD6////AQAAAAIAAAD6/wAAAQAAAAMAAAD6//3/AQAAAAEAAAD8//z/AQAAAAEAAAD7//z/AQAAAAEAAAD6//z/AQAAAAEAAAAAAPz/AQACAAAAAAD9//z/AQABAAAAAAD///z/AQABAAAAAAD+//z/AQABAAAAAAD7//3/AQAAAAEAAAD7//7/AQAAAAEAAAABAP3/AQACAAAAAAABAP7/AQACAAEAAAACAP3/AQACAAAAAAACAP7/AQACAAEAAAADAP3/AQACAAAAAAADAP7/AQABAAEAAAAEAP3/AQACAAAAAAAEAP7/AQACAAEAAAAEAPz/AQACAAAAAAAGAPr/AQADAAAAAAAGAPv/AQADAAEAAAAHAPr/AQAEAAAAAAAHAPv/AQAEAAEAAAAIAPr/AQAFAAAAAAAIAPv/AQAFAAEAAAAMAAIAAQAAAAIAAAAMAAMAAQAAAAMAAAANAAIAAQABAAIAAAANAAMAAQABAAMAAAALAAIAAQAAAAIAAAAKAAIAAQAAAAIAAAALAAMAAQAAAAMAAAAKAAMAAQAAAAMAAAAJAAIAAQAAAAIAAAAJAAMAAQAAAAMAAAAIAAIAAQAAAAIAAAAIAAMAAQAAAAMAAAA=")
tile_set = SubResource("TileSet_15dwq")

[node name="Ysort2" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="Ysort2" instance=ExtResource("2_pnxco")]
position = Vector2(1049, -367)

[node name="HungerController" parent="." instance=ExtResource("3_pnxco")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(373, -120)
zoom = Vector2(0.5, 0.5)

[node name="WorldBorder" parent="." instance=ExtResource("6_1g8w7")]
position = Vector2(-676, -13)
scale = Vector2(1, 8)

[node name="WorldBorder3" parent="." instance=ExtResource("6_1g8w7")]
position = Vector2(1444, -39)
scale = Vector2(1, 8)

[node name="WorldBorder2" parent="." instance=ExtResource("6_1g8w7")]
position = Vector2(392, -676)
rotation = 1.5708
scale = Vector2(1, 10)

[node name="WorldBorder4" parent="." instance=ExtResource("6_1g8w7")]
position = Vector2(337, 483)
rotation = 1.5708
scale = Vector2(1, 10)

[node name="MayaWalkActivationArea" type="Area2D" parent="."]
script = ExtResource("8_bbve7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MayaWalkActivationArea"]
position = Vector2(262, -423)
shape = SubResource("RectangleShape2D_e86mc")

[node name="MayaWalkPoint" type="Marker2D" parent="."]
position = Vector2(283, -462)

[node name="MayaWorkPoint" type="Marker2D" parent="."]
position = Vector2(225, -319)

[node name="BarDoor" parent="." instance=ExtResource("9_1y754")]
process_mode = 0
position = Vector2(1046, -518)
bar_scene_path = "uid://6wv4o224ga42"
is_leaving = true

[connection signal="body_entered" from="MayaWalkActivationArea" to="MayaWalkActivationArea" method="_on_body_entered"]
[connection signal="body_exited" from="MayaWalkActivationArea" to="MayaWalkActivationArea" method="_on_body_exited"]
